--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,13 @@
-title: Zachary # your name (or website title) here
+title: Zachary Chia # your name (or website title) here
 logo: "/images/zac photo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
+  About Me
+  <br>
+  An aspiring entry level data analyst  with strong communication skills derived 
+  from 5 years of experience as a Financial Consultant. Logical, analytical mindset 
+  with a deep interest and aptitude of working with data. Enjoys challenges and 
+  able to work under considerable pressure while delivering excellent results.
+  <br>
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/zachary-chia-461a021a2/">View My LinkedIn Profile</a> 
